# redis

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  adlist.c  adlist.h  ae.c  ae.h  ae_epoll.c  redis-benchmark.c  redis-cli.c  redis.c  zmalloc.h
tests/: CMakeLists.txt  test_adlist.c  test_dict.c  test_linenoise.c  test_sds.c
